# Robotic_arm

./: README.md
best/: data.pkl
best/.data/: serialization_id
best/data/: 0  1  10  100  102  103  104  105  106  108  109  110  111  112  114  115  116  117  118  12  120  121  122  123  124  126  127  128  129  13  130  132  133  134  135  136  138  139  14  140  (+257 more)
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/moveit_resources_panda_description/share/moveit_resources_panda_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/moveit_resources_panda_moveit_config/share/moveit_resources_panda_moveit_config/: package.sh  (+6 more)
log/: latest_build
src/moveit_resources_panda_description/: CMakeLists.txt  local_setup.sh
src/moveit_resources_panda_moveit_config/: .setup_assistant  CMakeLists.txt  README.md
src/moveit_resources_panda_moveit_config/config/: gripper_moveit_controllers.yaml  initial_positions.yaml  moveit_controllers.yaml  panda.ros2_control.xacro  panda.urdf  panda.xacro  panda_hand.ros2_control.xacro  ros2_controllers.yaml
src/moveit_resources_panda_moveit_config/launch/: demo.launch.py  full_simulation.launch.py  gazebo.launch.py  gazebo_simulation.launch.py  moveit.rviz
src/moveit_resources_panda_moveit_config/scripts/: panda_fk_node.cpp  panda_ik_node.cpp
src/moveit_resources_panda_moveit_config/src/: fk_node.cpp
src/moveit_resources_panda_moveit_config/web_backend/: backend.py
src/moveit_resources_panda_moveit_config/web_frontend/: panda_ik_frontend.html
(+67 files in other folders)
